# BJTU-smartcar

./: .gitignore  README.md
.github/workflows/: ci.yml
ROS2-Foxy/config/: fastdds_udp_only.xml  traffic_signs.yaml
ROS2-Foxy/deploy/d3_exploration/bjtu_frontier_explorer/: package.xml  setup.cfg  setup.py
ROS2-Foxy/deploy/d3_exploration/bjtu_frontier_explorer/bjtu_frontier_explorer/: __init__.py  clustering.py  costmap_utils.py  explorer_node.py  frontier_detection.py  fsm.py  nav_interface.py  occupancy.py  scoring.py
ROS2-Foxy/deploy/d3_exploration/bjtu_frontier_explorer/config/: frontier.yaml
ROS2-Foxy/deploy/d3_exploration/bjtu_frontier_explorer/launch/: d3_explore.launch.py
ROS2-Foxy/deploy/d3_exploration/bjtu_frontier_explorer/test/: test_clustering.py  test_costmap_utils.py  test_frontier_detection.py  test_fsm.py  test_occupancy.py  test_scoring.py
ROS2-Foxy/scripts/: calibrate_yolo_detection.py  drive.sh  env_cyclonedds.sh  free_devices.sh  fusion_node.py  run_base_driver_jetson.sh  run_bridge_jetson.sh  run_bridge_mac.sh  run_drive_bridge_jetson.sh  run_drive_bridge_mac.sh  run_teleop_mac.sh  sign_command_node.py  start_all.sh  start_sign_control.sh  stop_all.sh  stop_sign_control.sh
docs/: CICD_GUIDE.md  CLOUD_PLATFORM_AND_CICD_PLAN.md  SMARTCAR_USER_MANUAL.md  generate_smartcar_manual_pdf.py
tests/: test_hardware_independent_logic.py
yahboomcar_ws/: battery_monitor.py  battery_status.py  log.txt  nava.nodes  nodes.list  qq  voice_cmd_vel.py
yolo-train/: gen_synthetic.py  setup_server.sh  traffic_signs.yaml  train.sh  交通标志YOLO训练任务.md
(+94 files in other folders)
